--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -34,6 +34,8 @@
               <i class="fa fa-circle-o nav-icon"></i>
               <p>
                 <%= agenda.title %>
+                <object><%= link_to '削除', agenda_path(agenda),
+                method: :delete, data: { confirm: 'アジェンダを削除しますか?' } %></object>
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
