--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -41,10 +41,11 @@
                     <tr>
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
-                      <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
+                      <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete,
+                      data: { confirm: '削除しますか?' }, class: 'btn btn-sm btn-danger' %></td>
                       <% if @team.owner.id == current_user.id && assign.user.id != current_user.id %>
                         <td><%= link_to '権限移動', switch_owner_path(@team, owner_id: assign.user.id), method: :post,
-                        class: 'btn btn-sm btn-success' %></td>
+                        data: { confirm: '権限を移動しますか?' }, class: 'btn btn-sm btn-success' %></td>
                       <% end %>
                     </tr>
                   <% end %>
